Add otp resend and twilio api integration
