# src/models/messageTemplates.model.js
@@ -3,7 +3,11 @@ const Schema = mongoose.Schema;
 
 const messageTemplateSchema = new Schema(
   {
-    propertyId: { type: Schema.Types.ObjectId, ref: "Property", required: true },
+    propertyId: {
+      type: Schema.Types.ObjectId,
+      ref: "Property",
+      required: true,
+    },
     status: { type: String, required: true },
     message: { type: String, required: true },
     active: { type: Boolean, required: true },
@@ -11,6 +15,9 @@ const messageTemplateSchema = new Schema(
   { timestamps: true }
 );
 
-const MessageTemplate = mongoose.model("MessageTemplate", messageTemplateSchema);
+const MessageTemplate = mongoose.model(
+  "MessageTemplate",
+  messageTemplateSchema
+);
 
 module.exports = MessageTemplate;
