# src/routes/auth.route.js
@@ -1,11 +1,14 @@
 const { Router } = require("express");
-const { getAccessToken, verifyOtp } = require("../controllers/auth.controller");
-const nodemailerConfigOtptions = require("../configs/nodemailer.config");
-const nodemailer = require("nodemailer");
+const {
+  getAccessToken,
+  verifyOtp,
+  resendOtp,
+} = require("../controllers/auth.controller");
 
 require("dotenv").config();
 const router = Router();
 
 router.get("/accessToken", getAccessToken);
 router.post("/verifyOtp", verifyOtp);
+router.post("/resendOtp", resendOtp);
 module.exports = router;
